# ImgMatch

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  defines.mk
common/: CMakeLists.txt  Image.h  ImgMatch.h  Logger.cpp  Logger.h  ModScale.h
core/: Image.h  ImgMatch.h  Logger.cpp  Logger.h  Makefile  ModOcvSIFT.h  ModScale.cpp  ModScale.h
docs/: .gitignore  TODO.txt
image/: Image.cpp  OCVImage.cpp  OCVImage.h  QtImage.cpp  QtImage.h
imageimp/: CMakeLists.txt  OCVImage.cpp
modules/: CMakeLists.txt  ModOcvFeat.cpp  ModOcvFeat.h  ModOcvSIFT.cpp  ModOcvSIFT.h
qtui/: .gitignore  CMakeLists.txt  Image.cpp  ImgMatchUI.cpp  ImgMatchUI.h  ImgMatchUI.ui  OCVImage.cpp  OCVImage.h  QtImage.cpp  QtImage.h  main.cpp  qtui.pro
